--- a/.hintrc
+++ b/.hintrc
@@ -14,7 +14,8 @@
       "default",
       {
         "ignore": [
-          "scrollbar-width"
+          "scrollbar-width",
+          "backdrop-filter"
         ]
       }
     ]
