--- a/angular.json
+++ b/angular.json
@@ -38,11 +38,13 @@
             ],
             "styles": [
               "node_modules/swiper/swiper-bundle.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.css"
                         ],
             "scripts": [
               "node_modules/swiper/swiper-bundle.min.js",
-              "node_modules/swiper/swiper-bundle.js"
+              "node_modules/swiper/swiper-bundle.js",
+              "node_modules/intl-tel-input/build/js/intlTelInput.min.js"
             ]
           },
           "configurations": {
