--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@types/intl-tel-input": "^18.1.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "intl-tel-input": "^25.2.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.15",
     "tslib": "^2.3.0",
