--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
             "styles": [
               "node_modules/swiper/swiper-bundle.min.css",
               "src/styles.css",
-              "node_modules/intl-tel-input/build/css/intlTelInput.css"
+              "node_modules/intl-tel-input/build/css/intlTelInput.css",
+              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
                         ],
             "scripts": [
               "node_modules/swiper/swiper-bundle.min.js",
